# program_home_work

./: home_work_description.txt
dir_client/: CMakeLists.txt  main.c
dir_server/: CMakeLists.txt
dir_server/header/: cd_cmd.h  cmd.h  cmd_str_list.h  funs.h  ls_cmd.h  recv_buff.h  ref_count.h  send_buff.h  send_buff_list.h  server.h  session.h  statx.h  vector.h
dir_server/src/: cd_cmd.c  cmd.c  cmd_str_list.c  funs.c  ls_cmd.c  main.c  recv_buff.c  ref_count.c  send_buff.c  send_buff_list.c  server.c  session.c
dir_server/test/: cd_cmd_test.c  cmd_str_list_test.c  ls_cmd_test.c  recv_buff_test.c  ref_count_test.c  send_buff_test.c
